<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSeven"
                style="@style/numberButton"
                android:text="@string/strSeven" />

            <Button
                android:id="@+id/buttonEight"
                style="@style/numberButton"
                android:text="@string/strEight" />

            <Button
                android:id="@+id/buttonNine"
                style="@style/numberButton"
                android:text="@string/strNine" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/strPlus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonFour"
                style="@style/numberButton"
                android:text="@string/strFour" />

            <Button
                android:id="@+id/buttonFive"
                style="@style/numberButton"
                android:text="@string/strFive" />

            <Button
                android:id="@+id/buttonSix"
                style="@style/numberButton"
                android:text="@string/strSix" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/strMinus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOne"
                style="@style/numberButton"
                android:text="@string/strOne" />

            <Button
                android:id="@+id/buttonTwo"
                style="@style/numberButton"
                android:text="@string/strTwo" />

            <Button
                android:id="@+id/buttonThree"
                style="@style/numberButton"
                android:text="@string/strThree" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/strMulttiplication" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonZero"
                style="@style/numberButton"
                android:text="@string/strZero" />

            <Button
                android:id="@+id/buttonDecimal"
                style="@style/numberButton"
                android:text="@string/strDecimalP" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="@color/grey"
                android:text="@string/strEqual" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/strDivision" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>